@@ -1,0 +1,10 @@
+"""
+Actions are used by the user interface to execute user events.
+"""
+
+import diagramactions
+import editoractions
+import mainactions
+
+import itemactions
+import placementactions
