@@ -377,6 +377,7 @@ setup(name='gaphor',
                 'gaphor.ui',
                 'gaphor.misc',
                 'gaphor.adapters',
+                'gaphor.actions',
                 'zope',
                 'zope.interface',
                 'zope.component.bbb',
